--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ section {
 
 .inicio-fundo {
     /* aula 3 */
-    background-image: url('img/4965007.jpg');
+    background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/a/aa/Chor%C3%A3o_-_Charlie_Brown_Jr..jpg/512px-Chor%C3%A3o_-_Charlie_Brown_Jr..jpg?20130603173602');
     /* Substitua pelo caminho da sua imagem */
     background-size: cover;
     background-position: right;
